# plutosdr_driver

./: README.md  pyproject.toml
data/s_params/: LOGANTRES.s1p  LOGANTRESFULL.s1p
plots/: doppler_log.csv
scripts/plots/: doppler_log.csv
scripts/radar_projects/: cw_radar.py  cw_radar_exercise  cw_radar_exercise.py
scripts/script_outputs/: doppler_log.csv
src/driver/: hardware_setup.py  plots.py  signal_processing.py  waveforms.py
src/plots/: doppler_log.csv
src/plutosdr_driver/: __init__.py  hardware_setup.py  plots.py  signal_processing.py  waveforms.py
src/radar_project/: cw_radar.py
src/radar_projects/: MTI.py  __init__.py  cw_radar.py  cw_radar_system_design.ipynb  fmcw_radar.py
tests/: test_hardware_setup.py  test_imports.py
